--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <![endif]-->
   </head>
   <body>
-    <div class="container">
+    <div class="container text-center">
       <h1>Hello, world :)</h1>
 
       <p class="lead">I am Quentin Suire (alias <a href="https://github.com/kuhess">Kuhess</a>) and I work as a Software Engineer @ <a href="https://www.viadeo.com">Viadeo</a>.</p>
