--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Quentin Suire</title>
-    <!-- Latest compiled and minified CSS -->
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -16,20 +18,50 @@
     <![endif]-->
   </head>
   <body>
-    <div class="container text-center">
-      <h1>Hello, world :)</h1>
+    <div class="site-wrapper">
+      <div class="site-wrapper-inner">
+        <div class="cover-container">
+          <h1>Hello :)</h1>
+          
+          <p class="lead">I am <b>Quentin Suire</b> (alias <em>Kuhess</em>) and I work as a <b>Software Engineer @ <a href="https://www.viadeo.com">Viadeo</a></b>.</p>
 
-      <p class="lead">I am Quentin Suire (alias <a href="https://github.com/kuhess">Kuhess</a>) and I work as a Software Engineer @ <a href="https://www.viadeo.com">Viadeo</a>.</p>
-      <p>
-        <a class="btn btn-primary btn-lg" href="http://kuhess.github.io/presentations">Presentations</a>
-        <a class="btn btn-default btn-lg" href="https://github.com/kuhess">Github</a>
-        <a class="btn btn-default btn-lg" href="http://stackoverflow.com/users/1100417/kuhess">Stack Overflow</a>
-      </p>
+          <p>
+            <a href="https://github.com/kuhess" class="btn btn-default"><i class="fa fa-github"></i> Github</a>
+            <a href="http://stackoverflow.com/users/1100417/kuhess" class="btn btn-default"><i class="fa fa-stack-overflow"></i> Stack Overflow</a>
+            <a href="https://www.viadeo.com/en/profile/quentin.suire" class="btn btn-default"><i class="vicon vicon-viadeo"></i> Viadeo</a>
+            <a href="http://fr.linkedin.com/in/qsuire" class="btn btn-default"><i class="fa fa-linkedin"></i> Linkedin</a>
+          </p>
+
+          <p class="lead">For the moment, this page is pretty empty. But you can still find the <a href="http://kuhess.github.io/presentations">presentations</a> that I made.</p>
+
+          <p class="lead">
+            <i class="fa fa-heart"></i><br/>
+            <span class="label label-primary">Innovation</span>
+            <span class="label label-primary">Science</span>
+            <span class="label label-primary">New technologies</span>
+            <span class="label label-primary">Robotic</span>
+          </p>
+
+          <p>
+            <i class="fa fa-tag"></i><br/>
+            <span class="label label-info">Software Engineering</span>
+            <span class="label label-info">Linux</span>
+            <span class="label label-info">R&D</span><br/>
+            <span class="label label-info">Machine Learning</span>
+            <span class="label label-info">Distributed Architecture</span>
+            <span class="label label-info">Web Development</span><br/>
+            <span class="label label-info">Python</span>
+            <span class="label label-info">Java</span>
+            <span class="label label-info">Golang</span><br/>
+            <span class="label label-info">Git</span>
+            <span class="label label-info">Docker</span>
+            <span class="label label-info">Elasticsearch</span>
+          </p>
+        </div>
+      </div>
     </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   </body>
 </html>
