add TDD, BDD and CI

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
             <span class="label label-info">Machine Learning</span>
             <span class="label label-info">Distributed Architecture</span>
             <span class="label label-info">Web Development</span><br/>
+            <span class="label label-info">TDD</span>
+            <span class="label label-info">BDD</span>
+            <span class="label label-info">Continuous Integration</span><br/>
             <span class="label label-info">Python</span>
             <span class="label label-info">Java</span>
             <span class="label label-info">Golang</span><br/>
