add genetic algorithm

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
           <p>
             <i class="fa fa-tag"></i><br/>
             <span class="label label-info">Software Engineering</span>
-            <span class="label label-info">Linux</span>
             <span class="label label-info">R&D</span><br/>
-            <span class="label label-info">Machine Learning</span>
             <span class="label label-info">Distributed Architecture</span>
+            <span class="label label-info">Machine Learning</span>
+            <span class="label label-info">Genetic Algorithm</span>
             <span class="label label-info">Web Development</span><br/>
             <span class="label label-info">TDD</span>
             <span class="label label-info">BDD</span>
@@ -56,6 +56,7 @@
             <span class="label label-info">Python</span>
             <span class="label label-info">Java</span>
             <span class="label label-info">Golang</span><br/>
+            <span class="label label-info">Linux</span>
             <span class="label label-info">Git</span>
             <span class="label label-info">Docker</span>
             <span class="label label-info">Elasticsearch</span>
