add neural network

--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
             <i class="fa fa-tag"></i><br/>
             <span class="label label-info">Software Engineering</span>
             <span class="label label-info">R&D</span><br/>
-            <span class="label label-info">Distributed Architecture</span>
             <span class="label label-info">Machine Learning</span>
-            <span class="label label-info">Genetic Algorithm</span>
+            <span class="label label-info">Neural Network</span><br/>
+            <span class="label label-info">Genetic Algorithm</span><br/>
+            <span class="label label-info">Distributed Architecture</span>
             <span class="label label-info">Web Development</span><br/>
             <span class="label label-info">TDD</span>
             <span class="label label-info">BDD</span>
