--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <span class="label label-info">Software Engineering</span>
             <span class="label label-info">R&D</span><br/>
             <span class="label label-info">Machine Learning</span>
-            <span class="label label-info">Neural Network</span><br/>
+            <span class="label label-info">Neural Network</span>
             <span class="label label-info">Genetic Algorithm</span><br/>
             <span class="label label-info">Distributed Architecture</span>
             <span class="label label-info">Web Development</span><br/>
