remove job@video

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="cover-container">
           <h1>Hello :)</h1>
           
-          <p class="lead">I am <b>Quentin Suire</b> (alias <em>Kuhess</em>) and I work as a <b>Software Engineer @ <a href="https://www.viadeo.com">Viadeo</a></b>.</p>
+          <p class="lead">I am <b>Quentin Suire</b> (alias <em>Kuhess</em>) and I am a <b>Software Engineer</b>.</p>
 
           <p>
             <a href="https://github.com/kuhess" class="btn btn-default"><i class="fa fa-github"></i> Github</a>
@@ -32,7 +32,7 @@
             <a href="http://fr.linkedin.com/in/qsuire" class="btn btn-default"><i class="fa fa-linkedin"></i> Linkedin</a>
           </p>
 
-          <p class="lead">For the moment, this page is pretty empty. But you can still find the <a href="http://kuhess.github.io/presentations">presentations</a> that I made.</p>
+          <p class="lead">See my public <a href="/presentations">presentations</a>.</p>
 
           <p class="lead">
             <i class="fa fa-heart"></i><br/>
